# emphasoft_project

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yml
api/: index.html
docs/: index.md  run.md
docs/docs/: api.md
em_project/: manage.py
em_project/empha/: asgi.py  settings.py  urls.py  wsgi.py
em_project/rooms/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
em_project/rooms/management/commands/: populate_db.py
em_project/rooms/migrations/: 0001_initial.py  0002_alter_room_room_number.py  0003_remove_room_room_number_room_room.py  0004_alter_room_room.py
run/: index.html
search/: search_index.json
